--- a/Webcontent/css/main.css
+++ b/Webcontent/css/main.css
@@ -2,22 +2,29 @@
 <!--
 @charset "UTF-8";
 
-.container {
-	width:400px;
-	height:400px;
-	margin: 0 auto;
-    background: linear-gradient(-135deg, #E4A972, #9941D8);
-	text-align:center;
-	border-radius:4px;
-	color:#333;
+body {
+	width: 100vw;
+	height: 100vh;
+	margin:0; padding:0;
 }
 
 header {
+	position: fixed;
+	top:0;
 	display: flex;
 	width: 100%;
 	height: 100px;
+    background: linear-gradient(-135deg, #E4A972, #9941D8); 
+    opacity:0.5;
+}
+
+footer {
+	position: fixed;
+	bottom:0;
+	width: 100%;
+	height: 100px;
     background: linear-gradient(-135deg, #E4A972, #9941D8);
-    
+    opacity:0.5;
 }
 
 .menu-item {
@@ -31,11 +38,12 @@ header {
 }
 
 .footer-title {
-  	margin: auto;
-	display: flex;
-	width: 100%;
-	height: 100px;
-    background: linear-gradient(-135deg, #E4A972, #9941D8);
+
+}
+
+.main-wrapper {
+	width:100%;
+	height:100% - 200px;
 }
 
 </style>
