--- a/Webcontent/css/main.css
+++ b/Webcontent/css/main.css
@@ -15,7 +15,8 @@ header {
 	width: 100%;
 	height: 100px;
     background: linear-gradient(-135deg, #E4A972, #9941D8); 
-    opacity:0.5;
+    opacity:0.9;
+    z-index:3;
 }
 
 footer {
@@ -24,7 +25,38 @@ footer {
 	width: 100%;
 	height: 100px;
     background: linear-gradient(-135deg, #E4A972, #9941D8);
-    opacity:0.5;
+    opacity:0.9;
+    z-index:3;
+}
+
+.button {
+  display       : inline-block;
+  border-radius : 5%;          /* 角丸       */
+  font-size     : 18pt;        /* 文字サイズ */
+  text-align    : center;      /* 文字位置   */
+  cursor        : pointer;     /* カーソル   */
+  padding       : 12px 12px;   /* 余白       */
+  background    : linear-gradient(-135deg, #E4A972, #9941D8);     /* 背景色     */
+  color         : #ffffff;     /* 文字色     */
+  line-height   : 1em;         /* 1行の高さ  */
+  transition    : .3s;         /* なめらか変化 */
+  box-shadow    : 6px 6px 3px #666666;  /* 影の設定 */
+  border        : 2px solid #000066;    /* 枠の指定 */
+}
+.button:hover {
+  box-shadow    : none;        /* カーソル時の影消去 */
+  color         : #000066;     /* 背景色     */
+  background    : #ffffff;     /* 文字色     */
+}
+
+.text {
+  display       : inline-block;
+  border-radius : 5%;          /* 角丸       */
+  font-size     : 18pt;        /* 文字サイズ */
+  text-align    : center;      /* 文字位置   */
+  cursor        : pointer;     /* カーソル   */
+  padding       : 12px 12px;   /* 余白       */
+   border        : 2px solid #000066;    /* 枠の指定 */
 }
 
 .menu-item {
@@ -47,10 +79,20 @@ footer {
 	padding-top: 100px;
 }
 .mutterbox {
+  padding-top:100px;
+  padding-bottom:100px;
+}
+
+.postbox {
+	position:fixed;
+	height:50px;
+	padding-top:20px;
+}
+
+.mutterli {
 	display:inline-block;
 	border:solid 3px #9941D8;
 	padding:10px 10px;
 }
-
 
 </style>
